--- a/public/Q1_1stGraded.html
+++ b/public/Q1_1stGraded.html
@@ -1,4 +1,4 @@
 <script>
   document.write("hi, i'm erin janina m. purisima.");
-  document.write("you can call me erin or rina! :)");
+  document.write("you can call me erin! :)");
 </script>
