--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
    <nav>
     <ul>
       <li><a href="./public/Q1_1stGraded.html"> First Exercise </a> </li>
-    </ul>
+    <li><a href="./public/Q11stNGPotassiumPurisima.html"> Q1 1st Non-Graded</a> </li>
+</u1>
    </nav>
   </section>
 </body>
