Put window prompt

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
    <nav>
     <ul>
       <li><a href="./public/Q1_1stGraded.html"> First Exercise </a> </li>
+      <li><a href="./public/Q11stNGPotassium_Purisima.html"> First Exercise </a> </li>
     </ul>
    </nav>
   </section>
