--- a/public/Q11stNGPotassium_Purisima.html
+++ b/public/Q11stNGPotassium_Purisima.html
@@ -1,12 +1,21 @@
 <script>
-    let age, maxAge, numPerDay;
-    let window.prompt 
-    let window.confirm
+    let age = window.prompt ("Enter your age: ");
+    let maxAge = window.prompt ("How old do you want to live?: ");
+    let numPerDay = window.prompt ("How many of these snacks do you eat each day?: ");
 
+    let sure = window.confirm ("Are you sure these inputs are correct?");
+
+    if (sure == true){ 
     var totalRequired = (numPerDay * 365) * (maxAge - age);
-
+    document.write ("You are currently " + age + " years old and you will live up until " + maxAge + ". You eat your snacks " + numPerDay + " everyday.")
     document.write ("You will need " + totalRequired + " cups of coffee to last you until the ripe old age of " + maxAge + ".");
-    
+}
+    else {
+    document.write ("Eat well!");
+    }
+
+
+   
 
 
 
