--- a/public/Q11stNGPotassium_Purisima.html
+++ b/public/Q11stNGPotassium_Purisima.html
@@ -7,7 +7,7 @@
 
     if (sure == true){ 
     var totalRequired = (numPerDay * 365) * (maxAge - age);
-    document.write ("You are currently " + age + " years old and you will live up until " + maxAge + ". You eat your snacks " + numPerDay + " everyday.")
+    document.write ("You are currently " + age + " years old and you will live up until " + maxAge + ". You eat your snacks " + numPerDay + " times everyday. ")
     document.write ("You will need " + totalRequired + " cups of coffee to last you until the ripe old age of " + maxAge + ".");
 }
     else {
