--- a/public/Q11stNGPotassium_Purisima.html
+++ b/public/Q11stNGPotassium_Purisima.html
@@ -1,3 +1,5 @@
+<html>
+<body>
 <script>
     let age = window.prompt ("Enter your age: ");
     let maxAge = window.prompt ("How old do you want to live?: ");
@@ -20,3 +22,5 @@
 
 
 </script>
+</body>
+</html>
