--- a/public/Q11stNGPotassium_Purisima.html
+++ b/public/Q11stNGPotassium_Purisima.html
@@ -3,7 +3,7 @@
         <style>
             body {
                 background-color:lightpink;
-                font-size:medium;
+                font-size:50px;
                 color:darkred;
             }
         </style>
