--- a/public/Q11stNG_Duplicate.html
+++ b/public/Q11stNG_Duplicate.html
@@ -5,6 +5,7 @@
                 background-color:lightpink;
                 font-size:medium;
                 color:darkred;
+                font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
             }
         </style>
     </head>
