included tags before script

--- a/public/Q12GPotassiumPurisima.html
+++ b/public/Q12GPotassiumPurisima.html
@@ -2,7 +2,16 @@
 <html>
 <body>
 
-    <h2> Q1 2nd Graded Exercise submitted by name of section</h2>
+    <h2> Q1 2nd Graded Exercise submitted by K24 - Potassium</h2>
+    <head>
+        <style>
+            body {
+                background-color:lightpink;
+                font-size:50px;
+                color:darkred;
+            }
+        </style>
+    </head>
 
     <!-- Enter your tags below until the script tag -->
     
