try the label of meal price

--- a/public/Q12GPotassiumPurisima.html
+++ b/public/Q12GPotassiumPurisima.html
@@ -7,11 +7,15 @@
         <style>
             body {
                 background-color:lightpink;
-                font-size:50px;
+                font-size:30px;
                 color:darkred;
             }
         </style>
     </head>
+
+    <label for="mealPrice"> Meal Price: </label>
+    <br>
+    <input type="text" id="mealPrice" name="mealPrice"><br><br>
 
     <!-- Enter your tags below until the script tag -->
 
@@ -19,7 +23,7 @@
         const price = document.getElementById("meal_price");
         const tip = document.getElementById("my_tip");
         const charge = document.getElementById("serve_charge");
-        
+
         function totalMeal() {
               // place your JS code here
             
