build input boxes with labels

--- a/public/Q12GPotassiumPurisima.html
+++ b/public/Q12GPotassiumPurisima.html
@@ -7,15 +7,27 @@
         <style>
             body {
                 background-color:lightpink;
-                font-size:30px;
+                font-size:25px;
                 color:darkred;
             }
         </style>
     </head>
 
-    <label for="mealPrice"> Meal Price: </label>
-    <br>
-    <input type="text" id="mealPrice" name="mealPrice"><br><br>
+    <div>Meal Price:
+        <input id = "meal_price" style = "width: 100px; height: 20px;">
+        <br>
+    </div>
+
+    <div>Tip:
+        <input id = "my_tip" style = "width: 100px; height: 20px;">
+        <br>
+    </div>
+    
+    <div>Service Charge:
+        <input id = "serve_charge" style = "width: 100px; height: 20px;">
+        <br>
+        <button id = "btn_submit">Accept Input</button>
+    </div>
 
     <!-- Enter your tags below until the script tag -->
 
