--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
    <nav>
     <ul>
       <li><a href="./public/Q1_1stGraded.html"> First Exercise </a> </li>
-      <li><a href="./public/Q11stNGPotassium_Purisima.html"> First Exercise </a> </li>
+      <li><a href="./public/Q11stNGPotassium_Purisima.html"> First NG Exercise </a> </li>
+      <li><a href="./public/Q12GPotassiumPurisima.html"> Second Graded Exercise </a> </li> 
     </ul>
    </nav>
   </section>
