what am i doing (fixing the output)

--- a/public/Q12GPotassiumPurisima.html
+++ b/public/Q12GPotassiumPurisima.html
@@ -26,8 +26,10 @@
     <div>Service Charge:
         <input id = "serve_charge" style = "width: 100px; height: 20px;">
         <br>
-        <button id = "btn_submit">Accept Input</button>
+        <button id = "btn_submit" onclick="totalMeal()">Accept Input</button>
     </div>
+
+     <p id="totalMealOutput"></p>
 
     <!-- Enter your tags below until the script tag -->
 
