Add paragraph and html tags

--- a/public/Q13GPotassiumPurisima.html
+++ b/public/Q13GPotassiumPurisima.html
@@ -13,9 +13,17 @@
         </style>
     </head>
 
+    <p> Guess the number: **** <br> The number is from 1 to 100. <br> </p>
+    
+    <div>Enter your guess:
+        <input id = "guess" style = "width: 100px; height: 20px;">
+        <br>
+    </div>
    <!-- Enter your HTML tags below  but before the opening script tag -->
 
     <script>
+        
+
 
        var dNumber = Math.floor(Math.random() * 100) + 1; // generates a number from 1  to 100 when the page loads
 
