--- a/public/Q13GPotassiumPurisima.html
+++ b/public/Q13GPotassiumPurisima.html
@@ -29,7 +29,7 @@
     <script>
         
        var dNumber = Math.floor(Math.random() * 100) + 1;
-       var message = document.getElementById("message");
+       var messageElement = document.getElementById("message");
 
         function checkIt() {
         var userGuess = document.getElementById("guess").value;
