--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <li><a href="./public/Q1_1stGraded.html"> First Exercise </a> </li>
       <li><a href="./public/Q11stNGPotassium_Purisima.html"> First NG Exercise </a> </li>
       <li><a href="./public/Q12GPotassiumPurisima.html"> Second Graded Exercise </a> </li> 
+      <li><a href="./public/Q13GPotassiumPurisima.html"> Third Graded Exercise </a> </li>
     </ul>
    </nav>
   </section>
