--- a/public/Q13GPotassiumPurisima.html
+++ b/public/Q13GPotassiumPurisima.html
@@ -49,8 +49,8 @@
         }
     </script>
 
-    <!-- Resources stuff here: 
-     https://www.w3schools.com/js/js_htmldom_elements.asp
+    <!-- Sources: 
+     JavaScript HTML DOM elements. (n.d.). https://www.w3schools.com/. https://www.w3schools.com/js/js_htmldom_elements.asp
      -->
 
 </body>
