design guessing game

--- a/Q1Bonus_GuessingGame.html
+++ b/Q1Bonus_GuessingGame.html
@@ -1,3 +1,14 @@
+<html>
+    <head>
+        <style>
+            body {
+                background-color:lightpink;
+                font-size:medium;
+                color:darkred;
+                font-family: "Lucida Console", "Courier New", monospace;
+            }
+        </style>
+    </head>
 <h1>Guess My Word</h1>
 <p id="wordDisplay"></p>
 <input type="text" id="guessInput" maxlength="1">
@@ -26,3 +37,5 @@
     document.getElementById("guessInput").value = "";
   }
 </script>
+
+</html>
