--- a/Q1Bonus_GuessingGame.html
+++ b/Q1Bonus_GuessingGame.html
@@ -3,7 +3,7 @@
         <style>
             body {
                 background-color:lightpink;
-                font-size:medium;
+                font-size:30px;
                 color:darkred;
                 font-family: "Lucida Console", "Courier New", monospace;
             }
