--- a/public/Q1Bonus_Challenges.html
+++ b/public/Q1Bonus_Challenges.html
@@ -56,15 +56,11 @@
 
   function addGuess() {
     let letter = document.getElementById("letterInput").value;
+    if (!guessedLetters.includes(letter)) {
     guessedLetters.push(letter);
     document.getElementById("guesses").textContent = guessedLetters.join(", ");
     document.getElementById("letterInput").value = "";
-
-    for (let i = 0; i < guessedLetters.length; i++){
-        if (letter == letterInput){
-            document.write("Already guessed!");
-        }
-    } // HUH?????
+    }
 
     }
 
