--- a/Q1Bonus_GuessingGame.html
+++ b/Q1Bonus_GuessingGame.html
@@ -3,13 +3,14 @@
         <style>
             body {
                 background-color:lightpink;
-                font-size:30px;
+                font-size:40px;
                 color:darkred;
-                font-family: "Lucida Console", "Courier New", monospace;
+                text-align: center;
+                font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
             }
         </style>
     </head>
-<h1>Guess My Word</h1>
+<h1> Guess My Word! 🌷 </h1>
 <p id="wordDisplay"></p>
 <input type="text" id="guessInput" maxlength="1">
 <button onclick="makeGuess()">Guess</button>
