--- a/Q1Bonus_GuessingGame.html
+++ b/Q1Bonus_GuessingGame.html
@@ -17,8 +17,8 @@
 <p id="message"></p>
 
 <script>
-  let secretWord = ["c", "o", "d", "e"];
-  let guessedWord = ["_", "_", "_", "_"];
+  let secretWord = ["e", "n", "e", "r", "g", "e", "t", "i", "c"];
+  let guessedWord = ["_", "_", "_", "_", "_", "_", "_", "_", "_"];
 
   document.getElementById("wordDisplay").textContent = guessedWord.join(" ");
 
@@ -33,10 +33,11 @@
       }
     }
 
+  }
     document.getElementById("wordDisplay").textContent = guessedWord.join(" ");
     document.getElementById("message").textContent = correct ? "✅ Correct!" : "❌ Try again.";
     document.getElementById("guessInput").value = "";
-  }
+
 </script>
 
 </html>
