--- a/public/Q1Bonus_GuessingGame.html
+++ b/public/Q1Bonus_GuessingGame.html
@@ -6,6 +6,7 @@
                 font-size:40px;
                 color:darkred;
                 text-align: center;
+                justify-content: center;
                 font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
             }
         </style>
