--- a/public/Q1Bonus_GuessingGame.html
+++ b/public/Q1Bonus_GuessingGame.html
@@ -1,15 +1,23 @@
 <html>
     <head>
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Hachi+Maru+Pop&display=swap" rel="stylesheet">
         <style>
             body {
                 background-color:lightpink;
                 font-size:40px;
-                color:darkred;
+                color:rgb(187, 69, 85);
                 text-align: center;
-                font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                font-family: 'Hachi Maru Pop', cursive;
+                
                 display: flex;
                 justify-content: center;
                 align-items: center;
+
+                background-image: url('https://i.pinimg.com/736x/2c/bf/75/2cbf756d1c4419f6cc7a4bfaae904744.jpg');
+                background-size: cover;
+                background-position: center;
             }
         </style>
     </head>
