--- a/public/Q1Bonus_GuessingGame.html
+++ b/public/Q1Bonus_GuessingGame.html
@@ -10,7 +10,7 @@
                 color:rgb(187, 69, 85);
                 text-align: center;
                 font-family: 'Hachi Maru Pop', cursive;
-                
+
                 display: flex;
                 justify-content: center;
                 align-items: center;
@@ -33,9 +33,13 @@
 
 
 <script>
-  let secretWord = ["e", "n", "e", "r", "g", "e", "t", "i", "c"];
-  let guessedWord = ["_", "_", "_", "_", "_", "_", "_", "_", "_"];
-  let counter = 10;
+  let secretWord = ["e", "n", "e", "r", "g", "e", "t", "i", "c", "e", "r", "i", "n"];
+  let guessedWord = [];
+  let counter = 15;
+
+  for (let i = 0; i < secretWord.length; i++){
+    guessedWord.push("_");
+  }
 
   document.getElementById("wordDisplay").textContent = guessedWord.join(" ");
 
