--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <li><a href="./public/Q11stNGPotassium_Purisima.html"> First NG Exercise </a> </li>
       <li><a href="./public/Q12GPotassiumPurisima.html"> Second Graded Exercise </a> </li> 
       <li><a href="./public/Q13GPotassiumPurisima.html"> Third Graded Exercise </a> </li>
+      <li><a href="./public/Q1Bonus_GuessingGame.html"> Bonus: L4 Guessing Game </a> </li>
     </ul>
    </nav>
   </section>
