update portfolio link

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <li><a href="./public/Q12GPotassiumPurisima.html"> Second Graded Exercise </a> </li> 
       <li><a href="./public/Q13GPotassiumPurisima.html"> Third Graded Exercise </a> </li>
       <li><a href="./public/Q1Bonus_GuessingGame.html"> Bonus: L4 Guessing Game </a> </li>
+      <li><a href="./public/Q1_Reflection.md"> Q1 End of Lessons Reflection</a></li>
     </ul>
    </nav>
   </section>
