--- a/TableCSSCode.html
+++ b/TableCSSCode.html
@@ -1,9 +1,28 @@
 <html>
     <head>
+        <style>
+            body {
+                font-family: Lexend;
+            }
+
+            table {
+                border-collapse: collapse;
+                width: auto;
+                table-layout: auto;
+            }
+
+            td, th {
+                border: lpx solid;
+                text-align: center;
+                padding: 4px;
+            }
+
+            img {
+                height: 100px;
+                width: 200px;
+            }
+        </style>
         <body>
-
-
-        </body>
 
         <h1> wednesday schedule !</h1>
 
