--- a/TableCSSCode.html
+++ b/TableCSSCode.html
@@ -12,7 +12,7 @@
             }
 
             td, th {
-                border: lpx solid;
+                border: lpx solid #dddddd;
                 text-align: center;
                 padding: 4px;
             }
