--- a/TableCSSCode.html
+++ b/TableCSSCode.html
@@ -2,7 +2,7 @@
     <head>
         <style>
             body {
-                font-family: Lexend;
+                font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
             }
 
             table {
@@ -12,7 +12,7 @@
             }
 
             td, th {
-                border: lpx solid #dddddd;
+                border: lpx solid #490505;
                 text-align: center;
                 padding: 4px;
             }
@@ -30,13 +30,13 @@
             <tr>
 
             <th> Time </th>
-            <th> Subject </th>
+            <th> Activity </th>
             <th> Notes </th>
 
             </tr>
             <tr>
                 <td> 7:30 - 9:00 AM </td>
-                <td> <img src = https://mir-s3-cdn-cf.behance.net/projects/404/e3a80e74426791.Y3JvcCw4MDgsNjMyLDAsMA.png> </td>
+                <td> Bake Club! </td>
             </tr>
         </table>
     </head>
