update style of table

--- a/TableCSSCode.html
+++ b/TableCSSCode.html
@@ -1,26 +1,24 @@
 <html>
     <head>
-        <style>
-            body {
-                font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
-            }
+        <style> 
 
+            body {
+                font-family: Lexend;
+            }
             table {
                 border-collapse: collapse;
                 width: auto;
                 table-layout: auto;
-            }
-
+                }
             td, th {
-                border: lpx solid #490505;
+                border: 1px solid #662b2b;
                 text-align: center;
                 padding: 4px;
-            }
-
+                }
             img {
                 height: 100px;
                 width: 200px;
-            }
+                }
         </style>
         <body>
 
