fill up information

--- a/TableCSSCode.html
+++ b/TableCSSCode.html
@@ -29,12 +29,21 @@
 
             <th> Time </th>
             <th> Activity </th>
-            <th> Notes </th>
 
             </tr>
             <tr>
                 <td> 7:30 - 9:00 AM </td>
-                <td> Bake Club! </td>
+                <td> <img src = https://c.ndtvimg.com/2020-05/ob4tb22o_baking-650_625x300_07_May_20.jpg?im=FaceCrop,algorithm=dnn,width=1200,height=675> </td>
+            </tr>
+
+            <tr>
+                <td> 9:15 - 10:40 AM </td>
+                <td> <img src = https://wallpapercave.com/wp/wp3269205.jpg> </td>
+            </tr>
+
+            <tr>
+                <td> 10:50 - 12:10 PM </td>
+                <td> Homeroom with Potassium! </td>
             </tr>
         </table>
     </head>
