--- a/TableCSSCode.html
+++ b/TableCSSCode.html
@@ -29,16 +29,19 @@
 
             <th> Time </th>
             <th> Activity </th>
+            <th> Notes </th>
 
             </tr>
             <tr>
                 <td> 7:30 - 9:00 AM </td>
-                <td> <img src = https://c.ndtvimg.com/2020-05/ob4tb22o_baking-650_625x300_07_May_20.jpg?im=FaceCrop,algorithm=dnn,width=1200,height=675> </td>
+                <td> <img src = "https://c.ndtvimg.com/2020-05/ob4tb22o_baking-650_625x300_07_May_20.jpg?im=FaceCrop,algorithm=dnn,width=1200,height=675"> </td>
+                <td> <iframe src = "https://www.youtube.com/embed/D2uyPZ_kiIg"></iframe></td>
             </tr>
 
             <tr>
                 <td> 9:15 - 10:40 AM </td>
                 <td> <img src = https://wallpapercave.com/wp/wp3269205.jpg> </td>
+                <td> <iframe src = "https://www.youtube.com/embed/ZbyxjGE885I&list=RDZbyxjGE885I&start_radio=1"></iframe></td>
             </tr>
 
             <tr>
