--- a/TableCSSCode.html
+++ b/TableCSSCode.html
@@ -3,7 +3,7 @@
         <style> 
 
             body {
-                font-family: Lexend;
+                font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
             }
             table {
                 border-collapse: collapse;
@@ -16,8 +16,8 @@
                 padding: 4px;
                 }
             img {
-                height: 100px;
-                width: 200px;
+                height: 150px;
+                width: 250px;
                 }
         </style>
         <body>
