put aesthetic symbols

--- a/TableCSSCode.html
+++ b/TableCSSCode.html
@@ -3,7 +3,8 @@
         <style> 
 
             body {
-                font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+                font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                color: #490f3b
             }
             table {
                 border-collapse: collapse;
@@ -22,14 +23,14 @@
         </style>
         <body>
 
-        <h1> wednesday schedule !</h1>
+        <h1> wednesday schedule ˙✧˖°📷 ༘ ⋆｡˚ </h1>
 
         <table>
             <tr>
 
-            <th> Time </th>
-            <th> Activity </th>
-            <th> Notes </th>
+            <th> Time ༄˖°. </th>
+            <th> Activity .ೃ࿔*:･  </th>
+            <th> Notes ˚ ༘ ೀ⋆ </th>
 
             </tr>
             <tr>
