update layout and color

--- a/TableCSSCode.html
+++ b/TableCSSCode.html
@@ -3,8 +3,9 @@
         <style> 
 
             body {
+                background-color: lightgoldenrodyellow;
                 font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-                color: #490f3b
+                color: #490f3b;
             }
             table {
                 border-collapse: collapse;
