add aib links mwehehehe

--- a/NavBar.html
+++ b/NavBar.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-    
-    </head>
     <style>
         ul {
             list-style-type: none;
             margin: 0;
             padding: 0;
-            background-color:black;
+            background-color:rgb(82, 8, 8);
             display: flex;
             position: fixed;
             top: 0;
@@ -24,8 +22,16 @@
         }
 
         a:hover {
-            background-color:gainsboro;
+            background-color:rgb(99, 57, 57);
             padding: 20px 30px;
         }
-    </style>
+    </style>    
+    </head>
+    <body>
+        <u1>
+            <li><a href = "https://aliceinborderland.fandom.com/wiki/Shuntaro_Chishiya_(Netflix)"> Chishiya Shuntaro </a></li>
+            <li><a href = "https://aliceinborderland.fandom.com/wiki/Rei_Morikage_(Netflix)"> Rei Morikage </a></li>
+            <li><a href = "https://aliceinborderland.fandom.com/wiki/Mira_Kano_(Netflix)"> Mira Kano</a></li>
+        </u1>
+    </body>
 </html>
