update block...? perhaps?

--- a/NavBar.html
+++ b/NavBar.html
@@ -2,6 +2,7 @@
 <html>
     <head>
     <style>
+
         ul {
             list-style-type: none;
             margin: 0;
@@ -10,7 +11,7 @@
             display: flex;
             position: fixed;
             top: 0;
-            width: 40px;
+            width: max-content;
             height: 50px;
         }
 
