--- a/TableCSSCode.html
+++ b/TableCSSCode.html
@@ -1,3 +1,42 @@
+<!DOCTYPE html>
+<html>
+    <head>
+    <style>
+
+        ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            background-color:rgb(82, 8, 8);
+            display: flex;
+            position: fixed;
+            top: 0;
+            width: max-content;
+            height: 50px;
+        }
+
+        a {
+            display: block;
+            color:aliceblue; 
+            padding: 20px 30px;
+            text-decoration: none;
+        }
+
+        a:hover {
+            background-color:rgb(99, 57, 57);
+            padding: 20px 30px;
+        }
+    </style>    
+    </head>
+    <body>
+        <u1>
+            <li><a href = "https://aliceinborderland.fandom.com/wiki/Shuntaro_Chishiya_(Netflix)"> Part 1 </a></li>
+            <li><a href = "https://aliceinborderland.fandom.com/wiki/Rei_Morikage_(Netflix)"> Part 2 </a></li>
+            <li><a href = "https://aliceinborderland.fandom.com/wiki/Mira_Kano_(Netflix)"> Part 3 </a></li>
+        </u1>
+    </body>
+</html>
+
 <html>
     <head>
         <style> 
