turn into comment for reference

--- a/TableCSSCode.html
+++ b/TableCSSCode.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html>
     <head>
     <style>
@@ -35,7 +35,7 @@
             <li><a href = "https://aliceinborderland.fandom.com/wiki/Mira_Kano_(Netflix)"> Part 3 </a></li>
         </u1>
     </body>
-</html>
+</html>-->  
 
 <html>
     <head>
