align header and table to center

--- a/2Q1GPotassiumPurisima.html
+++ b/2Q1GPotassiumPurisima.html
@@ -7,11 +7,17 @@
                 font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
                 color: #490f3b;
             }
+            
             table {
                 border-collapse: collapse;
                 width: auto;
                 table-layout: auto;
                 }
+
+            h1 {
+                text-align: center;
+            }
+
             td, th {
                 border: 1px solid #662b2b;
                 text-align: center;
@@ -22,6 +28,7 @@
                 margin-left: auto;
                 margin-right: auto;
             }
+
             img {
                 height: 150px;
                 width: 250px;
@@ -35,5 +42,10 @@
             <th> time ⋆˚࿔ </th>
             <th> subject ⋆˚࿔ </th>
             <th> remarks ⋆˚࿔ </th>
+        </tr>
+
+        <tr>
+
+
         </tr>
     </table>
