lock in for design fr

--- a/2Q1GPotassiumPurisima.html
+++ b/2Q1GPotassiumPurisima.html
@@ -5,9 +5,11 @@
             body {
                 background-color: lightgoldenrodyellow;
                 font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-                color: #490f3b;
+                font-size: 25px;
+                text-align: center;
+                color: #061459;
             }
-            
+
             table {
                 border-collapse: collapse;
                 width: auto;
@@ -22,6 +24,7 @@
                 border: 1px solid #662b2b;
                 text-align: center;
                 padding: 4px;
+                font-size: 19px;
                 }
             
             table.center {
@@ -36,16 +39,39 @@
         </style>
         <body>
 
-    <h1> potassium friday schedule! ˚.🎀༘⋆ </h1>
+    <h1> potassium friday schedule! ˚.🌊⋆ </h1>
     <table class = "center">
         <tr> 
             <th> time ⋆˚࿔ </th>
             <th> subject ⋆˚࿔ </th>
             <th> remarks ⋆˚࿔ </th>
         </tr>
-
         <tr>
-
-
+            <td> 7:30 - 8:15 am </td>
+            <td> physics 😒🎯 </td>
+        </tr>
+        <tr>
+            <td> 8:15 - 9:00 am </td>
+            <td> sp #1 - paskorus practice ⭐🎄</td>
+        </tr>
+        <tr>
+            <td> 9:10 - 10:40 am </td>
+            <td> english 💍📜 </td>
+        </tr>
+        <tr>
+            <td> 10:40 - 12:20 pm </td>
+            <td> social science 🪶🗺️ </td>
+        </tr>
+        <tr>
+            <td> 12:20 - 1:05 pm </td>
+            <td> LUNCHHHH 😭😭🙏 </td>
+        </tr>
+        <tr>
+            <td> 1:50 - 2:35 pm </td>
+            <td> sp #2 - paskorus practice 🎶⛄ </td>
+        </tr>
+        <tr>
+            <td> 2:45 - 4:15 pm </td>
+            <td> mathematics 😴📈 </td>
         </tr>
     </table>
