--- a/2Q1GPotassiumPurisima.html
+++ b/2Q1GPotassiumPurisima.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset = "UTF-8">
+        <title> 9K Friday Schedule </title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Delius&display=swap" rel="stylesheet">
         <style> 
             body {
                 background-color: lightgoldenrodyellow;
-                font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
                 font-size: 25px;
                 text-align: center;
-                color: #061459;
+                color: #17428d;
             }
-
+            .delius-regular {
+            font-family: "Delius", cursive;
+            font-weight: 400;
+            font-style: normal;
+            }
+ 
             table {
                 border-collapse: collapse;
                 width: auto;
@@ -18,12 +27,13 @@
 
             h1 {
                 text-align: center;
+                color: #061459; 
             }
 
             td, th {
                 border: 1px solid #662b2b;
                 text-align: center;
-                padding: 4px;
+                padding: 12px;
                 font-size: 19px;
                 }
             
@@ -39,7 +49,7 @@
         </style>
         <body>
 
-    <h1> potassium friday schedule! ˚.🌊⋆ </h1>
+    <h1> potassium friday schedule! *ੈ✩‧₊˚🎐 </h1>
     <table class = "center">
         <tr> 
             <th> time ⋆˚࿔ </th>
@@ -47,31 +57,31 @@
             <th> remarks ⋆˚࿔ </th>
         </tr>
         <tr>
-            <td> 7:30 - 8:15 am </td>
+            <td> 7:30 - 8:15 AM </td>
             <td> physics 😒🎯 </td>
         </tr>
         <tr>
-            <td> 8:15 - 9:00 am </td>
+            <td> 8:15 - 9:00 AM </td>
             <td> sp #1 - paskorus practice ⭐🎄</td>
         </tr>
         <tr>
-            <td> 9:10 - 10:40 am </td>
+            <td> 9:10 - 10:40 AM </td>
             <td> english 💍📜 </td>
         </tr>
         <tr>
-            <td> 10:40 - 12:20 pm </td>
+            <td> 10:40 - 12:20 PM </td>
             <td> social science 🪶🗺️ </td>
         </tr>
         <tr>
-            <td> 12:20 - 1:05 pm </td>
+            <td> 12:20 - 1:05 PM </td>
             <td> LUNCHHHH 😭😭🙏 </td>
         </tr>
         <tr>
-            <td> 1:50 - 2:35 pm </td>
+            <td> 1:50 - 2:35 PM </td>
             <td> sp #2 - paskorus practice 🎶⛄ </td>
         </tr>
         <tr>
-            <td> 2:45 - 4:15 pm </td>
+            <td> 2:45 - 4:15 PM </td>
             <td> mathematics 😴📈 </td>
         </tr>
     </table>
